@@ -1,3 +1,15 @@
+2012-10-10  Yong Li  <yoli@rim.com>
+
+        [BlackBerry] Define WTF_USE_EXTRA_MACROS in cmake rather than Platform.h
+        https://bugs.webkit.org/show_bug.cgi?id=98819
+
+        Reviewed by Rob Buis.
+
+        And make it depend on SHARED_CORE
+        RIM PR# 221339.
+
+        * Source/cmake/OptionsBlackBerry.cmake:
+
 2012-10-10  Keishi Hattori  <keishi@webkit.org>
 
         REGRESSION (r129738): Calendar picker is too wide when the input is rtl
